--- a/css/nav.css
+++ b/css/nav.css
@@ -44,13 +44,13 @@ nav a:hover {
 		height: calc(100vh - 70px);
 		top: 70px;
 		left: calc(100% + 10px);
-		box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.15);
+		box-shadow: 5px 7px 5px rgba(0, 0, 0, 0.15);
 		padding-left: 20px;
 		background-color: rgba(255, 255, 255, 1);
 	}
 
 	div.container.opened > nav {
-		left: calc(100% - 240px);
+		left: calc(100% - 242px);
 	}
 
 	div.container.opened > nav > ul {
@@ -76,7 +76,7 @@ nav a:hover {
 		content: "";
 		position: absolute;
 		top: 70px;
-		width: 100vw;
+		width: calc(100vw - 20px);
 		height: calc(100% - 70px);
 		background-color: rgba(0, 0, 0, .15);
 	}
