--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,6 @@
 nav {
 	position: fixed;
 	font : normal 20px/30px "Light", Arial, sans-serif;
-	z-index: 11;
 	transition: all .25s ease;
 }
 
@@ -31,30 +30,34 @@ nav a:hover {
 	div.container > nav {
 		top: 20px;
 		left: calc(50% - 280px);
+		z-index: 12;
 	}
 
 	nav > ul {
 		width: 560px;
 		justify-content: space-around;
-	}
+}
 }
 
 @media (max-width: 1040px) {
 	div.container > nav {
-		height: calc(100vh - 70px);
-		top: 70px;
+		height: 100vh;
+		top: 0;
 		left: calc(100% + 10px);
 		box-shadow: 5px 7px 5px rgba(0, 0, 0, 0.15);
 		padding-left: 20px;
-		background-color: rgba(255, 255, 255, 1);
+		padding-top: 70px;
+		background-color: rgba(250, 250, 250, 1);
+		z-index: 5;
 	}
 
 	div.container.opened > nav {
-		left: calc(100% - 242px);
+		left: calc(100% - 240px);
 	}
 
 	div.container.opened > nav > ul {
 		opacity: 1;
+		padding-top: 20px;
 	}
 
 	div.container > nav > ul {
@@ -68,37 +71,12 @@ nav a:hover {
 		margin-bottom: 20px;
 	}
 
-	/* div.container > nav > ul > li:first-child {
-		margin-bottom: 50px;
-	} */
-
 	div.container.opened::after {
 		content: "";
 		position: absolute;
 		top: 70px;
-		width: calc(100vw - 20px);
+		width: 100vw;
 		height: calc(100% - 70px);
 		background-color: rgba(0, 0, 0, .15);
 	}
-}
-
-@media (min-width: 481px) and (max-width: 1040px) {
-	div.container > nav {
-		padding-top: 20px;
-	}
-}
-
-@media (max-width: 480px) {
-		/* li.lang_mob > ul {
-		display: flex;
-		justify-content: space-between;
-		width: 80px;
-		height: 30px;
-	} */
-
-	div.container > nav {
-
-		padding-top: 20px;
-	}
-
 }
