--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ ul {
 @media (max-width: 1040px) {
 	div.container.opened {
 		left: -240px;
-		min-width: calc(100vw - 20px);
+		min-width: 100vw;
+		/* min-width: calc(100vw - 20px); */
 		}
 	}
