--- a/css/404.css
+++ b/css/404.css
@@ -1,26 +1,34 @@
 @charset "UTF-8";
 
 div.content > div.err_page {
-	max-width: 800px;
+	max-width: 1170px;
 	margin: 0 auto;
 }
 
 div.content > div.err_page > h1 {
+	position: relative;
 	font: normal 120px/120px "Light", Arial, sans-serif;
-	color: rgba(255, 10, 10, 1);
-	padding-top: 20px;
+	color: rgba(119, 119, 119, 1);
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+div.content > div.err_page > h1::after {
+	position: absolute;
+	content: "";
+	width: 80px;
+	height: 4px;
+	bottom: 0;
+	left: calc(50% - 40px);
+	background-color: rgba(255, 10, 10, 1);
 }
 
 div.content > div.err_page > h3 {
 	color: rgba(119, 119, 119, 1);
 	margin-top: 20px;
 	margin-bottom: 20px;
-}
-
-div.content > div.err_page > h1,
-div.content > div.err_page > h3,
-div.content > div.err_page > p {
 	text-align: center;
+	padding-bottom: 20px;
 }
 
 div.content > div.err_page > p,
@@ -31,7 +39,6 @@ div.content > div.err_page > ul  {
 }
 
 div.content > div.err_page > ul > li {
-	max-width: 280px;
 	position: relative;
 	padding-left: 20px;
 	margin: 0 auto;
@@ -48,16 +55,28 @@ div.content > div.err_page > ul > li::before {
 	border-radius: 50%;
 }
 
+@media (min-width: 1401px) {
+	div.content > div.err_page {
+		padding: 60px;
+	}
+}
+
+@media (min-width: 1041px) and (max-width: 1400px)  {
+	div.content > div.err_page {
+		padding: 50px;
+	}
+}
+
 @media (min-width: 1041px) {
 	div.content > div.err_page > h3 {
 		font: normal 40px/40px "Roboto Condensed", Arial, sans-serif;
 	}
+
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
 	div.content > div.err_page {
-		padding-left: 40px;
-		padding-right: 40px;
+		padding: 40px;
 	}
 
 	div.content > div.err_page > h3 {
@@ -67,8 +86,7 @@ div.content > div.err_page > ul > li::before {
 
 @media (min-width: 481px) and (max-width: 720px) {
 	div.content > div.err_page {
-		padding-left: 30px;
-		padding-right: 30px;
+		padding: 30px;
 	}
 
 	div.content > div.err_page > h3 {
@@ -78,8 +96,7 @@ div.content > div.err_page > ul > li::before {
 
 @media (max-width: 480px) {
 	div.content > div.err_page {
-		padding-left: 20px;
-		padding-right: 20px;
+		padding: 20px;
 	}
 
 	div.content > div.err_page > h3 {
