--- a/css/404.css
+++ b/css/404.css
@@ -3,13 +3,13 @@
 div.content > div.err_page {
 	max-width: 1170px;
 	margin: 0 auto;
+	color: rgba(51, 51, 51, 1);
 }
 
 div.content > div.err_page > h1 {
 	position: relative;
-	font: normal 120px/120px "Light", Arial, sans-serif;
-	color: rgba(119, 119, 119, 1);
 	text-align: center;
+	padding-top: 20px;
 	padding-bottom: 20px;
 }
 
@@ -24,16 +24,13 @@ div.content > div.err_page > h1::after {
 }
 
 div.content > div.err_page > h3 {
-	color: rgba(119, 119, 119, 1);
-	margin-top: 20px;
-	margin-bottom: 20px;
 	text-align: center;
+	padding-top: 20px;
 	padding-bottom: 20px;
 }
 
 div.content > div.err_page > p,
 div.content > div.err_page > ul  {
-	font: normal 20px/28px "Light", Arial, sans-serif;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
@@ -49,7 +46,6 @@ div.content > div.err_page > ul > li::before {
 	content: "";
 	width: 8px;
 	height: 8px;
-	top: 10px;
 	left: 0;
 	background-color: rgba(255, 10, 10, 1);
 	border-radius: 50%;
@@ -69,9 +65,21 @@ div.content > div.err_page > ul > li::before {
 
 @media (min-width: 1041px) {
 	div.content > div.err_page > h3 {
-		font: normal 40px/40px "Roboto Condensed", Arial, sans-serif;
+		font: normal 30px/34px "Roboto Condensed", Arial, sans-serif;
 	}
 
+	div.content > div.err_page > p,
+	div.content > div.err_page > ul  {
+		font: normal 20px/28px "Light", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > ul > li::before {
+		top: 10px;
+	}
+
+	div.content > div.err_page > h1 {
+		font: normal 45px/45px "Roboto Condensed", Arial, sans-serif;
+	}
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
@@ -80,7 +88,20 @@ div.content > div.err_page > ul > li::before {
 	}
 
 	div.content > div.err_page > h3 {
-		font: normal 36px/40px "Roboto Condensed", Arial, sans-serif;
+		font: normal 30px/34px "Roboto Condensed", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > p,
+	div.content > div.err_page > ul  {
+		font: normal 20px/24px "Light", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > ul > li::before {
+		top: 8px;
+	}
+
+	div.content > div.err_page > h1 {
+		font: normal 45px/45px "Roboto Condensed", Arial, sans-serif;
 	}
 }
 
@@ -89,8 +110,21 @@ div.content > div.err_page > ul > li::before {
 		padding: 30px;
 	}
 
+	div.content > div.err_page > h1 {
+		font: normal 40px/40px "Roboto Condensed", Arial, sans-serif;
+	}
+
 	div.content > div.err_page > h3 {
-		font: normal 32px/36px "Roboto Condensed", Arial, sans-serif;
+		font: normal 26px/28px "Roboto Condensed", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > p,
+	div.content > div.err_page > ul  {
+		font: normal 18px/20px "Light", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > ul > li::before {
+		top: 6px;
 	}
 }
 
@@ -99,7 +133,20 @@ div.content > div.err_page > ul > li::before {
 		padding: 20px;
 	}
 
+	div.content > div.err_page > h1 {
+		font: normal 36px/40px "Roboto Condensed", Arial, sans-serif;
+	}
+
 	div.content > div.err_page > h3 {
-		font: normal 28px/30px "Roboto Condensed", Arial, sans-serif;
+		font: normal 24px/28px "Roboto Condensed", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > p,
+	div.content > div.err_page > ul  {
+		font: normal 18px/20px "Light", Arial, sans-serif;
+	}
+
+	div.content > div.err_page > ul > li::before {
+		top: 6px;
 	}
 }
