--- a/css/content.css
+++ b/css/content.css
@@ -1,27 +1,10 @@
 @charset "UTF-8";
 
-div.content {
+article {
 	position: relative;
 	width: 100%;
 	color: rgba(51, 51, 51, 1);
 	margin-top: 70px;
-}
-
-div.video {
-	position: relative;
-	width: 100%;
-	height: calc(100vh - 70px);
-	overflow: hidden;
-}
-
-div.video > video {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	min-width: 100%;
-	min-height: 100%;
-	transform: translate(-50%, -50%);
-	z-index: 1;
 }
 
 div.prod_types,
@@ -43,26 +26,6 @@ div.text_container {
 	max-width: 1170px;
 	margin-left: auto;
 	margin-right: auto;
-}
-
-div.video_cover {
-	position: relative;
-	max-width: 1170px;
-	height: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: 2;
-}
-
-div.video_cover > div {
-	position: absolute;
-	padding: 10px 10px 10px 20px;
-	background-color: rgba(255, 255, 255, 0.8);
-}
-
-div.video_cover > div > p {
-	text-transform: uppercase;
-	text-align: left;
 }
 
 div.text_container {
@@ -150,18 +113,19 @@ div.preview_wrap p > a:hover::after {
 	transform: translateX(5px);
 }
 
-div.content h2 {
+div.preview h3 {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	text-transform: uppercase;
+	text-align: center;
 }
 
-div.content a {
+div.preview a {
 	color: rgba(214, 0, 0, 1);
 	transition : all .25s ease;
 }
 
-div.content a:hover {
+div.preview a:hover {
 	color: rgba(169, 0, 0, 1);
 }
 
@@ -171,7 +135,6 @@ div.text p {
 }
 
 @media (min-width: 1041px) and (max-width: 1400px) {
-	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
@@ -180,17 +143,6 @@ div.text p {
 }
 
 @media (min-width: 1041px) {
-	div.video_cover > div {
-		min-width: 35%;
-		max-width: 50%;
-		right: 0;
-		bottom: 60px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 26px/34px "Light", Arial, sans-serif;
-	}
-
 	div.prod_types > ul > li {
 		width: calc((100% - 60px) / 4);
 		margin-bottom: 40px;
@@ -223,9 +175,8 @@ div.text p {
 		margin-left: auto;
 	}
 
-	div.content h2 {
+	div.preview h3 {
 		font : normal 27px/28px "Light", Arial, sans-serif;
-		text-align: center;
 	}
 
 	div.preview p {
@@ -239,21 +190,10 @@ div.text p {
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
-	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container   {
 		width: calc(100% - 80px);
-	}
-
-	div.video_cover > div {
-		width: 50vmax;
-		right: 0;
-		bottom: 40px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 20px/26px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li span {
@@ -268,9 +208,8 @@ div.text p {
 		padding: 50px;
 	}
 
-	div.content h2 {
+	div.preview h3 {
 		font : normal 27px/28px "Light", Arial, sans-serif;
-		text-align: center;
 	}
 
 	div.preview p {
@@ -283,7 +222,6 @@ div.text p {
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
-
 	div.prod_types > ul > li {
 		width: calc((100% - 40px) / 2);
 		margin-bottom: 40px;
@@ -316,12 +254,11 @@ div.text p {
 		justify-content: center;
 	}
 
-	div.content h2 {
+	div.preview h3 {
 		font: normal 18px/18px "Light", Arial, sans-serif;
-		text-align: center;
 	}
 
-	div.preview p {
+	div.preview_wrap p {
 		font: normal 16px/25px "Light", Arial, sans-serif;
 	}
 
@@ -331,21 +268,10 @@ div.text p {
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
-	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
 		width: calc(100% - 60px);
-	}
-
-	div.video_cover > div {
-		width: 83%;
-		right: 0;
-		bottom: 30px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 16px/25px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li span {
@@ -360,19 +286,10 @@ div.text p {
 }
 
 @media (max-width: 480px) {
-	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
 		width: calc(100% - 40px);
-	}
-
-	div.video_cover > div {
-		bottom: 60px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 16px/25px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li {
