--- a/css/company.css
+++ b/css/company.css
@@ -36,7 +36,6 @@ div.photo_text > div {
 	position: relative;
 	cursor: pointer;
 	transition: all .25s ease;
-	/* margin-bottom: 20px; */
 }
 
 div.text_photo > div > img,
@@ -62,49 +61,44 @@ div.photo_text > div:first-child:hover::before{
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
-div.text_photo > div:last-child > div > a,
-div.photo_text > div:first-child > div > a {
-	display: block;
-	position: absolute;
-	width: 40px;
-	height: 40px;
-	top: calc(50% - 20px);
-	left: calc(50% - 20px);
-	color: rgba(255, 255, 255, 1);
-	text-align: center;
-	font-size: 20px;
-	line-height: 40px;
-	background-color: rgba(0, 0, 0, 0.8);
-	background-position: 0 0;
-	border-radius: 50%;
-	transition: all .25s ease;
-	z-index: 2;
-	opacity: 0;
-}
+div.container > article div.lb::after {
+	display : block;
+	position : absolute;
+	top : calc(50% - 20px);
+	left : calc(50% - 20px);
+	z-index : 2;
+	width : 40px;
+	height : 40px;
+	background-color : rgba(0, 0, 0, 0.8);
+	color : rgba(255, 255, 255, 1);
+	text-align : center;
+	font-size : 30px;
+	line-height : 36px;
+	border-radius : 50%;
+	transition : opacity .25s ease;
+	content : "+";
+	opacity : 0;
+	}
 
-div.text_photo > div:last-child:hover > div > a,
-div.photo_text > div:first-child:hover > div > a {
-	opacity: 1;
-}
+div.container > article div.lb:hover::after {
+	opacity : 1;
+	}
 
-.lightbox {
-	display: none;
-	position: fixed;
+div.container > div.lbox {
+	display : flex;
+	justify-content : center;
+	position : fixed;
+	top : 0;
+	left : 0;
+	z-index : 20;
 	width: 100%;
 	height: 100%;
-	top: 0;
-	left: 0;
 	background-color: rgba(0, 0, 0, 0.8);
-	z-index: 20;
-}
+	cursor : pointer;
+	}
 
-.lightbox:target {
-	display: flex;
-	justify-content: center;
-}
-
-@media all and (orientation: portrait) {
-	.lightbox > img {
+	@media all and (orientation: portrait) {
+	.lbox > img {
 		max-width: 90%;
 		height: auto;
 		margin: auto;
@@ -112,7 +106,7 @@ div.photo_text > div:first-child:hover > div > a {
 }
 
 @media all and (orientation: landscape) {
-	.lightbox > img {
+	.lbox > img {
 		width: auto;
 		max-height: 85%;
 		margin: auto;
