--- a/css/content.css
+++ b/css/content.css
@@ -258,7 +258,7 @@ div.text p {
 		font: normal 18px/18px "Light", Arial, sans-serif;
 	}
 
-	div.preview_wrap p {
+	div.preview p {
 		font: normal 16px/25px "Light", Arial, sans-serif;
 	}
 
