--- a/css/expertise.css
+++ b/css/expertise.css
@@ -10,7 +10,12 @@ div.brief > p > span {
 
 article ul.experts {
 	display: flex;
+	display : -webkit-box;
+	display : -webkit-flex;
+	display : -ms-flexbox;
 	flex-wrap: wrap;
+	-webkit-flex-wrap : wrap;
+	-ms-flex-wrap : wrap;
 	max-width: 1170px;
 	margin: 0 auto;
 	padding-top: 40px;
@@ -64,6 +69,9 @@ article ul.experts > li > div > div.reverse {
 
 article ul.experts > li > div > div.reverse > div {
 	display: flex;
+	display : -webkit-box;
+	display : -webkit-flex;
+	display : -ms-flexbox;
 	background-color: rgba(136, 136, 136, 1);
 }
 
