--- a/css/expertise.css
+++ b/css/expertise.css
@@ -20,7 +20,6 @@ article ul.experts {
 	margin: 0 auto;
 	padding-top: 40px;
 	padding-bottom: 20px;
-
 }
 
 div.preview.experts {
@@ -160,6 +159,10 @@ ul.experts  div.averse span::after {
 		padding-top: calc(160% + 80px);
 	}
 
+	article ul.experts > li > div > div {
+		height: 100%;
+	}
+
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 18px/20px "Light", Arial, sans-serif;
 	}
@@ -175,10 +178,6 @@ ul.experts  div.averse span::after {
 	article ul.experts > li {
 		width: 100%;
 	}
-
-	article ul.experts > li > div {
-		padding-top: calc(160% + 80px);
-	}
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
@@ -188,15 +187,15 @@ ul.experts  div.averse span::after {
 
 	article ul.experts > li {
 		width: 70%;
-		margin: 0 auto;
+		margin: 0 auto 40px;
 	}
 
 	article ul.experts > li > div {
 		padding-top: calc(160% + 80px);
 	}
 
-	article ul.experts > li > div > div.averse {
-		margin-bottom: 40px;
+	article ul.experts > li > div > div {
+		height: 100%;
 	}
 
 	article ul.experts > li > div > div.reverse > p {
@@ -218,6 +217,10 @@ ul.experts  div.averse span::after {
 		padding-top: calc(155% + 80px);
 	}
 
+	article ul.experts > li > div > div {
+		height: 100%;
+	}
+
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 18px/18px "Light", Arial, sans-serif;
 	}
@@ -235,6 +238,10 @@ ul.experts  div.averse span::after {
 
 	article ul.experts > li > div {
 		padding-top: 180%;
+	}
+
+	article ul.experts > li > div > div {
+		height: 100%;
 	}
 
 	article ul.experts > li > div > div.reverse > p {
