--- a/css/expertise.css
+++ b/css/expertise.css
@@ -108,7 +108,7 @@ ul.experts p {
 ul.experts span {
 	display: block;
 	position: relative;
-	padding: 30px 15px 60px;
+	padding: 15px 15px 40px;
 	font: normal 20px/20px "Roboto Condensed", Arial, sans-serif;
 }
 
@@ -127,7 +127,7 @@ ul.experts  li span::after {
 	display: block;
 	width: 100%;
 	height: 30px;
-	top: 70px;
+	top: 50px;
 	font : normal 16px/30px "Light", Arial, sans-serif;
 }
 
@@ -229,19 +229,20 @@ ul.experts  div.averse span::after {
 @media (max-width: 480px)  {
 	article ul.experts {
 		width: calc(100% - 40px);
+		align-items: center;
 	}
 
 	article ul.experts > li {
-		width: 100%;
-		margin-bottom: 20px;
+		width: 90%;
+		margin: 0 auto 20px;
 	}
 
 	article ul.experts > li > div {
-		padding-top: 180%;
+		padding-top: calc(160% + 80px);
 	}
 
 	article ul.experts > li > div > div {
-		height: 100%;
+		/* height: 100%; */
 	}
 
 	article ul.experts > li > div > div.reverse > p {
@@ -256,13 +257,13 @@ ul.experts  div.averse span::after {
 		overflow: hidden;
 	}
 
-	div.averse > span {
+	/* div.averse > span {
 		position: absolute;
 		bottom: 0;
 		z-index: 2;
 		background-color: rgba(255, 255, 255, 1);
 		width: 100%;
-	}
+	} */
 
 	article ul.experts > li > div > div.reverse > div {
 		display: none;
