--- a/css/expertise.css
+++ b/css/expertise.css
@@ -108,7 +108,7 @@ ul.experts p {
 ul.experts span {
 	display: block;
 	position: relative;
-	padding: 15px 15px 40px;
+	padding: 15px 15px 60px;
 	font: normal 20px/20px "Roboto Condensed", Arial, sans-serif;
 }
 
@@ -140,9 +140,138 @@ ul.experts  div.averse span::after {
 	text-align: center;
 }
 
+div.down_level {
+	padding-bottom: 100px !important;
+}
+
+footer div.gallery {
+	position: relative;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
+footer div.gallery > div.swiper {
+	width: 100%;
+	overflow: hidden;
+}
+
+footer ul.swiper-wrapper {
+	display: flex;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	width: 1170px;
+	padding: 0;
+	margin: 0;
+}
+
+footer ul.swiper-wrapper > li > div {
+	position: relative;
+	width: inherit;
+	padding-top: 60%;
+	overflow: hidden;
+}
+
+footer ul.swiper-wrapper > li > div > img {
+	display: block;
+	position: absolute;
+	width: inherit;
+	height: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+footer ul.swiper-wrapper > li > div::before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0);
+	transition: all 0.3s ease;
+	z-index: 1;
+	cursor: pointer;
+
+}
+
+footer ul.swiper-wrapper > li > div::after {
+	content: "+";
+	position: absolute;
+	width: 40px;
+	height: 40x;
+	top: calc(50% - 20px);
+	left: calc(50% - 20px);
+	color: rgba(255, 255, 255, 1);
+	background-color : rgba(0, 0, 0, 0.8);
+	font-size: 30px;
+	text-align: center;
+	line-height : 36px;
+	border-radius : 50%;
+	z-index: 2;
+	transform: scale(0);
+	transition: all 0.3s ease;
+	cursor: pointer;
+}
+
+footer ul.swiper-wrapper > li:hover > div::before {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+footer ul.swiper-wrapper > li:hover > div::after {
+	transform: scale(1);
+}
+
+div.gallery > div.button {
+	position: absolute;
+	width: 40px;
+	height: 80px;
+	top: calc(50% - 40px);
+	background-color: rgba(119, 119, 119, 1);
+	border-radius: 2px;
+	z-index: 5;
+	cursor: pointer;
+}
+
+div.gallery > div.button.prev {
+	left: 0;
+}
+
+div.gallery > div.button.next {
+	right: 0;
+}
+
+div.gallery > div.button::after {
+	position: absolute;
+	font-size: 50px;
+	line-height: 75px;
+	left: 10px;
+	color: rgba(255, 255, 255, 1);
+	text-align: center;
+}
+
+div.gallery > div.button.prev::after {
+	content: "\2039";
+}
+
+div.gallery > div.button.next::after {
+	content: "\203a";
+}
+
+@media(min-width: 1401px) {
+	footer div.gallery {
+		max-width: 1170px;
+	}
+}
+
 @media (min-width: 1041px) and (max-width: 1400px) {
 	article ul.experts {
 		width: calc(100% - 100px);
+	}
+
+	footer div.gallery {
+		max-width: calc(100% - 100px);
 	}
 }
 
@@ -166,6 +295,10 @@ ul.experts  div.averse span::after {
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 18px/20px "Light", Arial, sans-serif;
 	}
+
+	footer ul.swiper-wrapper > li  {
+		/* padding: 0 40px; */
+	}
 }
 
 @media (min-width: 1041px) and (max-width: 1171px) {
@@ -185,6 +318,10 @@ ul.experts  div.averse span::after {
 		width: calc(100% - 80px);
 	}
 
+	footer div.gallery {
+		max-width: calc(100% - 80px);
+	}
+
 	article ul.experts > li {
 		width: 70%;
 		margin: 0 auto 40px;
@@ -201,11 +338,19 @@ ul.experts  div.averse span::after {
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 18px/20px "Light", Arial, sans-serif;
 	}
+
+	footer ul.swiper-wrapper > li  {
+		/* padding: 0 30px; */
+	}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
 	article ul.experts {
 		width: calc(100% - 60px);
+	}
+
+	footer div.gallery {
+		max-width: calc(100% - 60px);
 	}
 
 	article ul.experts > li {
@@ -229,12 +374,19 @@ ul.experts  div.averse span::after {
 @media (max-width: 480px)  {
 	article ul.experts {
 		width: calc(100% - 40px);
+	}
+
+	footer div.gallery {
+		max-width: calc(100% - 40px);
+	}
+
+	article ul.experts {
 		align-items: center;
 	}
 
 	article ul.experts > li {
-		width: 90%;
-		margin: 0 auto 20px;
+		width: 100%;
+		margin-bottom: 20px;
 	}
 
 	article ul.experts > li > div {
@@ -248,6 +400,10 @@ ul.experts  div.averse span::after {
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 17px/18px "Light", Arial, sans-serif;
 	}
+
+	footer ul.swiper-wrapper > li  {
+		/* padding: 0 20px; */
+	}
 }
 
 @media (max-width: 480px) and (orientation: portrait) {
@@ -257,16 +413,15 @@ ul.experts  div.averse span::after {
 		overflow: hidden;
 	}
 
-	/* div.averse > span {
+	div.averse > span {
 		position: absolute;
 		bottom: 0;
 		z-index: 2;
 		background-color: rgba(255, 255, 255, 1);
 		width: 100%;
-	} */
+	}
 
 	article ul.experts > li > div > div.reverse > div {
 		display: none;
 	}
-
 }
