--- a/css/expertise.css
+++ b/css/expertise.css
@@ -148,11 +148,13 @@ footer div.gallery {
 	position: relative;
 	margin: 0 auto;
 	overflow: hidden;
+	max-width: 1170px;
 }
 
 footer div.gallery > div.swiper {
-	width: 100%;
+	/* width: 100%; */
 	overflow: hidden;
+	margin: 0 auto;
 }
 
 footer ul.swiper-wrapper {
@@ -160,7 +162,7 @@ footer ul.swiper-wrapper {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
-	width: 1170px;
+	width: 2000em;
 	padding: 0;
 	margin: 0;
 }
@@ -260,7 +262,7 @@ div.gallery > div.button.next::after {
 }
 
 @media(min-width: 1401px) {
-	footer div.gallery {
+	footer div.gallery > div.swiper {
 		max-width: 1170px;
 	}
 }
@@ -270,8 +272,8 @@ div.gallery > div.button.next::after {
 		width: calc(100% - 100px);
 	}
 
-	footer div.gallery {
-		max-width: calc(100% - 100px);
+	footer div.gallery > div.swiper {
+		max-width: calc(100vw - 100px);
 	}
 }
 
@@ -295,10 +297,6 @@ div.gallery > div.button.next::after {
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 18px/20px "Light", Arial, sans-serif;
 	}
-
-	footer ul.swiper-wrapper > li  {
-		/* padding: 0 40px; */
-	}
 }
 
 @media (min-width: 1041px) and (max-width: 1171px) {
@@ -318,8 +316,8 @@ div.gallery > div.button.next::after {
 		width: calc(100% - 80px);
 	}
 
-	footer div.gallery {
-		max-width: calc(100% - 80px);
+	footer div.gallery > div.swiper {
+		max-width: calc(100vw - 80px);
 	}
 
 	article ul.experts > li {
@@ -339,9 +337,6 @@ div.gallery > div.button.next::after {
 		font : normal 18px/20px "Light", Arial, sans-serif;
 	}
 
-	footer ul.swiper-wrapper > li  {
-		/* padding: 0 30px; */
-	}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
@@ -349,8 +344,8 @@ div.gallery > div.button.next::after {
 		width: calc(100% - 60px);
 	}
 
-	footer div.gallery {
-		max-width: calc(100% - 60px);
+	footer div.gallery > div.swiper {
+		max-width: calc(100vw - 60px);
 	}
 
 	article ul.experts > li {
@@ -376,8 +371,8 @@ div.gallery > div.button.next::after {
 		width: calc(100% - 40px);
 	}
 
-	footer div.gallery {
-		max-width: calc(100% - 40px);
+	footer div.gallery > div.swiper{
+		max-width: calc(100vw - 40px);
 	}
 
 	article ul.experts {
@@ -399,10 +394,6 @@ div.gallery > div.button.next::after {
 
 	article ul.experts > li > div > div.reverse > p {
 		font : normal 17px/18px "Light", Arial, sans-serif;
-	}
-
-	footer ul.swiper-wrapper > li  {
-		/* padding: 0 20px; */
 	}
 }
 
