--- a/css/gallery.css
+++ b/css/gallery.css
@@ -22,15 +22,6 @@ ul.swiper-wrapper {
 	padding: 0;
 	margin: 0;
 }
-/* 
-ul.swiper-wrapper > li {
-	padding: 0 !important;
-	margin-left: 0 !important;
-}
-
-ul.swiper-wrapper > li::before {
-	display: none;
-} */
 
 ul.swiper-wrapper > li > a {
 	display: block;
@@ -96,9 +87,9 @@ div.gallery > div.button {
 	width: 40px;
 	height: 80px;
 	top: calc(50% - 40px);
-	background-color: rgba(119, 119, 119, 1);
-	border-radius: 2px;
-	z-index: 5;
+	background-color: rgba(255, 10, 10, 1);
+	border-radius: 3px;
+	z-index: 42;
 	cursor: pointer;
 }
 
@@ -117,14 +108,23 @@ div.gallery > div.button::after {
 	left: 10px;
 	color: rgba(255, 255, 255, 1);
 	text-align: center;
+	transition: transform 0.25s ease;
 }
 
 div.gallery > div.button.prev::after {
 	content: "\2039";
 }
 
+div.gallery > div.button.prev:hover::after {
+	transform: translateX(-7px);
+}
+
 div.gallery > div.button.next::after {
 	content: "\203a";
+}
+
+div.gallery > div.button.next:hover::after {
+	transform: translateX(7px);
 }
 
 @media(min-width: 1401px) {
@@ -134,25 +134,30 @@ div.gallery > div.button.next::after {
 }
 
 @media (min-width: 1041px) and (max-width: 1400px) {
+	div.gallery,
 	div.gallery > div.swiper {
 		max-width: calc(100vw - 100px);
 	}
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
+	div.gallery,
 	div.gallery > div.swiper {
 		max-width: calc(100vw - 80px);
 	}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
+	div.gallery,
 	div.gallery > div.swiper {
 		max-width: calc(100vw - 60px);
 	}
 }
 
 @media (max-width: 480px) {
+	div.gallery,
 	div.gallery > div.swiper{
 		max-width: calc(100vw - 40px);
 	}
+
 }
