--- a/css/product.css
+++ b/css/product.css
@@ -18,3 +18,14 @@ div.preview.product::after {
 	left: 0;
 	background-color: rgba(255, 255, 255, 0.6);
 }
+
+div.photo_text > div > img {
+	width: 100%;
+	height: auto;
+}
+
+@media (max-width: 720px) {
+	div.photo_text {
+		padding-top: 30px;
+	}
+}
