--- a/css/gallery.css
+++ b/css/gallery.css
@@ -82,7 +82,7 @@ ul.swiper-wrapper > li:hover > a::after {
 	transform: scale(1);
 }
 
-div.gallery > div.button {
+div.button {
 	position: absolute;
 	width: 40px;
 	height: 80px;
@@ -93,15 +93,7 @@ div.gallery > div.button {
 	cursor: pointer;
 }
 
-div.gallery > div.button.prev {
-	left: 0;
-}
-
-div.gallery > div.button.next {
-	right: 0;
-}
-
-div.gallery > div.button::after {
+div.button::after {
 	position: absolute;
 	font-size: 50px;
 	line-height: 75px;
@@ -111,19 +103,19 @@ div.gallery > div.button::after {
 	transition: transform 0.25s ease;
 }
 
-div.gallery > div.button.prev::after {
+ div.button.prev::after {
 	content: "\2039";
 }
 
-div.gallery > div.button.prev:hover::after {
+ div.button.prev:hover::after {
 	transform: translateX(-7px);
 }
 
-div.gallery > div.button.next::after {
+ div.button.next::after {
 	content: "\203a";
 }
 
-div.gallery > div.button.next:hover::after {
+div.button.next:hover::after {
 	transform: translateX(7px);
 }
 
@@ -133,31 +125,61 @@ div.gallery > div.button.next:hover::after {
 	}
 }
 
+@media(min-width: 1271px) {
+	div.button.prev {
+   	left: calc((100vw - 1268px) / 2);
+   }
+
+    div.button.next {
+   	right: calc((100vw - 1268px) / 2);
+   }
+}
+
+@media (min-width: 1041px) and (max-width: 1270px) {
+	div.button.prev {
+   	left: 10px;
+   }
+
+    div.button.next {
+   	right: 10px;
+   }
+}
+
 @media (min-width: 1041px) and (max-width: 1400px) {
 	div.gallery,
 	div.gallery > div.swiper {
-		max-width: calc(100vw - 100px);
+		width: calc(100vw - 100px);
 	}
+}
+
+@media (max-width: 1040px) {
+	div.button.prev {
+   	left: 0;
+   }
+
+    div.button.next {
+   	right: 0;
+   }
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
 	div.gallery,
 	div.gallery > div.swiper {
-		max-width: calc(100vw - 80px);
+		width: calc(100vw - 80px);
 	}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
 	div.gallery,
 	div.gallery > div.swiper {
-		max-width: calc(100vw - 60px);
+		width: calc(100vw - 60px);
 	}
 }
 
 @media (max-width: 480px) {
 	div.gallery,
 	div.gallery > div.swiper{
-		max-width: calc(100vw - 40px);
+		width: calc(100vw - 40px);
 	}
 
 }
